# Citrust_RPG

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.code-workspace
assets/: statuses.json
assets/bossItems/: AppleCore.txt  Dekopeel.txt  DriedMango.txt  DurianThorn.txt  Grapevine.txt  PearStem.txt  (+2 more)
include/: AppleBossScreen.hpp  Boss.h  BuyItemPopup.hpp  ConsumableItem.h  EquipPopup.hpp  EquipmentScreen.hpp  Fruit.h  Game.h  GameScreen.hpp  Global.hpp  IScreen.hpp  IndefinitePopup.hpp  InterludeScreen.hpp  InventoryButton.hpp  InventoryPopup.hpp  InventoryScreen.hpp  Item.h  LoadScreen.hpp  NameScreen.hpp  Player.h  Popup.hpp  PrologueScreen1.hpp  PrologueScreen2.hpp  ScreenManager.hpp  Shop.h  ShopScreen.hpp  SolidButton.hpp  Stat.h  StatsPopup.hpp  Status.h  SuspenseScreen.hpp  TextButton.hpp  TitleScreen.hpp  TutorialScreen.hpp  TutorialScreen1.hpp  TutorialScreen10.hpp  TutorialScreen11.hpp  TutorialScreen12.hpp  TutorialScreen13.hpp  TutorialScreen2.hpp  (+9 more)
src/: AppleBossScreen.cpp  Boss.cpp  BossItemManager.cpp  BuyItemPopup.cpp  CenterPopup.cpp  ConsumableItem.cpp  EquipPopup.cpp  EquipmentScreen.cpp  Fruit.cpp  Game.cpp  GameScreen.cpp  Global.cpp  IButton.cpp  IScreen.cpp  IndefinitePopup.cpp  InterludeScreen.cpp  InventoryPopup.cpp  InventoryScreen.cpp  Item.cpp  ItemPopup.cpp  LoadScreen.cpp  LoseScreen.cpp  NameScreen.cpp  Player.cpp  Popup.cpp  PrologueScreen1.cpp  PrologueScreen2.cpp  RefreshPopup.cpp  ScreenManager.cpp  Shop.cpp  ShopScreen.cpp  SolidButton.cpp  StatsPopup.cpp  Status.cpp  StatusManager.cpp  SuspenseScreen.cpp  TextButton.cpp  TitleScreen.cpp  TutorialScreen.cpp  TutorialScreen1.cpp  (+17 more)
tests/: BossTest.cpp  FruitTest.cpp  ItemTest.cpp  ShopTest.cpp  StatTest.cpp  StatusTest.cpp
(+192 files in other folders)
